--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -19,11 +19,13 @@ output:
 class: center, middle
 
 ```{r setup, include = FALSE}
-options(htmltools.dir.version = FALSE)
+if ("xaringan" %in% loadedNamespaces()) {
+    options(htmltools.dir.version = FALSE)
+    knitr::opts_chunk$set(fig.height = 5, fig.width = 6)
+    xaringanExtra::use_tile_view()
+    xaringanExtra::use_clipboard()
+}
 knitr::opts_chunk$set(collapse = TRUE, warning = FALSE)
-knitr::opts_chunk$set(fig.height = 5, fig.width = 6)
-xaringanExtra::use_clipboard()
-xaringanExtra::use_tile_view()
 library(ggplot2)
 theme_set(theme_minimal() +
           theme(text = element_text(size = 16)) +
@@ -34,6 +36,7 @@ here_rel <- function(path)
 
 ```{css, echo = FALSE}
 .content-box-blue { background-color: lightblue; }
+.small-font { font-size: 70%; }
 .note {
 	padding: 15px;
 	margin-bottom: 20px;
@@ -721,6 +724,37 @@ p
 ```
 ]
 
+```{r, eval = FALSE, echo = FALSE}
+## Fancier version that gets a color legend.
+## Could also get a line type legend.
+p <- ggplot(geyser) +
+    geom_histogram(aes(x = duration, y = stat(density)),
+                   fill = "grey", color = "black", bins = 50)
+p <- p + 
+    stat_function(aes(color = type),
+                  data = filter(sgd, type == "long"),
+                  fun = function(x)
+                          sgd$prop[1] * dnorm(x, sgd$mean[1], sgd$sd[1])) +
+    stat_function(aes(color = type),
+                  data = filter(sgd, type == "short"),
+                  fun = function(x)
+                          sgd$prop[2] * dnorm(x, sgd$mean[2], sgd$sd[2]))
+p
+
+p <- p +
+     stat_function(aes(color = type),
+                  data = filter(sgd2, type == "long"),
+                  linetype = 2,
+                  fun = function(x)
+                          sgd2$prop[1] * dnorm(x, sgd2$mean[1], sgd2$sd[1])) +
+    stat_function(aes(color = type),
+                  data = filter(sgd2, type == "short"),
+                  linetype = 2,
+                  fun = function(x)
+                          sgd2$prop[2] * dnorm(x, sgd2$mean[2], sgd2$sd[2]))
+p
+```
+
 ---
 ## Minnesota Barley Yields
 
@@ -952,6 +986,7 @@ This emphasizes the reversal for Morris.
 
 _Bar charts_ are sometimes used for summaries, but dot plots are
 usually a better choice.
+
 .pull-left[
 ```{r barley-avg-bar, echo = FALSE, message = FALSE, fig.width = 7}
 ggplot(barley_site_year) +
@@ -1159,7 +1194,7 @@ How well do bar charts and pie charts work?
 --
 
 .pull-left[
-```{r, echo = FALSE, fig.width = 8}
+```{r, echo = FALSE, fig.height = 4, fig.width = 8}
 cowplot::plot_grid(pb, pp)
 ```
 ]
@@ -1231,9 +1266,13 @@ class: center, middle
 # Visual Perception and the Grammar of Graphics
 
 ---
+layout: true
+
 ## Monthly River Flows
 
 Monthly flow volumes recorded for a river in the pacific north-west.
+
+---
 
 An initial plot using default settings:
 
@@ -1246,9 +1285,6 @@ rd <- data.frame(flow = river, month = seq_along(river))
 ]
 
 ---
-## Monthly River Flows
-
-Monthly flow volumes recorded for a river in the pacific north-west.
 
 Changing the _aspect ratio_:
 
@@ -1259,9 +1295,6 @@ pp + coord_fixed(3.5)
 ]
 
 ---
-## Monthly River Flows
-
-Monthly flow volumes recorded for a river in the pacific north-west.
 
 Time series are often visualized with a line plot:
 
@@ -1273,9 +1306,6 @@ pl + coord_fixed(3.5)
 ]
 
 ---
-## Monthly River Flows
-
-Monthly flow volumes recorded for a river in the pacific north-west:
 
 The seasonal variation can be seen with a line plot in the original
 aspect ratio:
@@ -1287,6 +1317,8 @@ pl
 ]
 
 ---
+layout: false
+
 ## A Simple Model of Visual Perception
 
 The eyes acquire an image, which is processed through three stages of
@@ -1431,6 +1463,7 @@ Some channels are better at conveying information than others.
 Munzner's ordering by accuracy:
 
 --
+.small-font[
 
 | Magnitude Channels (Ordered, Numerical) | Identity Channels (Categorical) |
 |-----------------------------------------|---------------------------------|
@@ -1442,6 +1475,9 @@ Munzner's ordering by accuracy:
 | Depth (3D position)                     |                                 |
 | Color luminance, saturation             |                                 |
 | Curvature, volume (3D size)             |                                 |
+
+]
+
 --
 
 Line width is another channel; not sure there is agreement on its
@@ -1536,7 +1572,7 @@ class: center, middle
 # A Grammar of Data Manipulation
 
 ---
-## A Grammar of Data Manipulation
+## The `dplyr` Package
 
 The `dplyr` package provides a language, or grammar, for data
 manipulation.
@@ -1573,7 +1609,8 @@ The most commonly used verbs operate on a single data frame:
 
 * `summarize`: collapse rows down to summaries
 
---
+---
+## The `dplyr` Package
 
 There are also a number of `join` verbs that merge several data frames
 into one.
@@ -1595,7 +1632,7 @@ class: center, middle
 
 
 ---
-## More Examples
+## Raw Data
 
 These examples start with raw data as you might receive it from a
 researcher, and involve reading and cleaning the data.
@@ -2054,7 +2091,7 @@ more sophisticated interactive maps:
 
 <!-- http://rstudio.github.io/leaflet/legends.html-->
 .hide-code[
-```{r, fig.height = 7, fig.width = 10}
+```{r, fig.height = 6.5, fig.width = 9}
 library(leaflet)
 pal <- colorNumeric(palette = "viridis", domain = md$rate1K)
 lab <- lapply(paste0(md$cname, "<BR>",
