--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -38,6 +38,10 @@ here_rel <- function(path)
 ```{css, echo = FALSE}
 .content-box-blue { background-color: lightblue; }
 .small-font { font-size: 70%; }
+.width-20 { width: 20% }
+.width-30 { width: 30% }
+.width-60 { width: 60% }
+.width-70 { width: 70% }
 .note {
 	padding: 15px;
 	margin-bottom: 20px;
@@ -289,6 +293,146 @@ Arithmetic operations are vectorized to operate element-wise on vectors.
 Data vectors are usually combined into table-like objects called _data
 frames_.
 
+
+---
+## Working with R
+
+Some simple examples:
+
+--
+
+.pull-left.width-20[
+Scalar arithmetic:
+]
+--
+.pull-right.width-70[
+```{r, prompt = TRUE, comment = ""}
+1 + 2
+```
+]
+
+--
+
+.pull-left.width-20[
+Making vectors:
+]
+--
+.pull-right.width-70[
+```{r prompt = TRUE, comment = ""}
+c(2, 4, 6)
+```
+{{content}}
+]
+--
+```{r prompt = TRUE, comment = ""}
+1 : 4
+```
+
+--
+
+.pull-left.width-20[
+Defining variables:
+]
+--
+.pull-right.width-70[
+```{r, prompt = TRUE, comment = ""}
+x <- c(2, 4, 6)
+```
+{{content}}
+]
+--
+The result is returned _invisibly_.
+
+
+---
+## Working with R
+
+.pull-left.width-20[
+Vector arithmetic:
+]
+--
+.pull-right.width-70[
+```{r prompt = TRUE, comment = ""}
+x + 1
+```
+
+{{content}}
+]
+--
+```{r prompt = TRUE, comment = ""}
+x + x
+```
+
+--
+
+.pull-left.width-20[
+Vectorized math functions:
+]
+--
+.pull-right.width-70[
+```{r prompt = TRUE, comment = ""}
+log(x)
+```
+]
+
+--
+
+.pull-left.width-20[
+Single elements:
+]
+--
+.pull-right.width-70[
+```{r prompt = TRUE, comment = ""}
+x[[1]]
+```
+]
+
+.pull-left.width-20[
+Subsets:
+]
+--
+.pull-right.width-70[
+```{r prompt = TRUE, comment = ""}
+x[1 : 2]
+```
+]
+
+---
+## Working with R
+
+.pull-left.width-20[
+Logical indexing:
+]
+--
+.pull-right.width-70[
+```{r, prompt = TRUE, comment = ""}
+x[x > 2]
+```
+]
+
+--
+
+.pull-left.width-20[
+Creating data frames:
+]
+--
+.pull-right.width-70[
+```{r, prompt = TRUE, comment = ""}
+d <- data.frame(x, y = log(x))
+d
+```
+]
+
+--
+
+.pull-left.width-20[
+Accessing variables in data frames:
+]
+.pull-right.width-70[
+```{r, prompt = TRUE, comment = ""}
+d$x
+```
+]
 
 ---
 ## The Data Analysis Process
