--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -2,7 +2,7 @@
 title: "Basic Data Wrangling and Data Visualization in R"
 author: "Luke Tierney"
 institute: "University of Iowa"
-date: "21 June, 2021"
+date: "1 July, 2022"
 output:
   xaringan::moon_reader:
     includes:
@@ -70,7 +70,7 @@ In this class I will
 --
 
 Materials for this class are available on GitHub at
-<https://github.com/ltierney/SIBS-WV-2021.git>.
+<https://github.com/ltierney/SIBS-WV-2022.git>.
 
 --
 
@@ -81,20 +81,20 @@ Materials for this class are available on GitHub at
 
 * You can use the `git` command line client with
     ```shell
-git clone https://github.com/ltierney/SIBS-WV-2021.git
+git clone https://github.com/ltierney/SIBS-WV-2022.git
     ```
 
 --
 
 Materials are also available at
-<https://www.stat.uiowa.edu/~luke/SIBS-R/SIBS-WV-2021/>.
+<https://www.stat.uiowa.edu/~luke/SIBS-R/SIBS-WV-2022/>.
 
 --
 
 Materials for our _Data Visualization and Data
 Technologies_ course are available at
 
-<http://www.stat.uiowa.edu/~luke/classes/STAT4580-2021/>
+<http://www.stat.uiowa.edu/~luke/classes/STAT4580-2022/>
 
 
 ---
@@ -763,8 +763,10 @@ The functions `summarize`, `group_by`, and `mutate` are from the
 
 ---
 
+.pull-left[
 This computation can also be written using the _forward pipe operator_ `%>%`:
-
+{{content}}
+]
 --
 
 ```{r}
@@ -777,15 +779,23 @@ sgd <-
     mutate(prop = n / sum(n))
 sgd
 ```
+
 --
 
+.pull-right[
 <div class = "note">
 The pipe operator allows a sequence of operations to be chained together.
 
+{{content}}
+]
 --
 
 The left-hand operation is passed implicitly as the first argument to
 the function called on the right.
+
+{{content}}
+--
+In R 4.1.0 and later versions you can also use the base R pipe operator `|>`.
 </div>
 <!-- foobar - don't ask -->
 
@@ -796,9 +806,11 @@ One way to show the superimposed normal densities:
 .pull-left[
 ```{r geyser-hist-dens, echo = FALSE}
 f1 <- function(x)
-    sgd$prop[1] * dnorm(x, sgd$mean[1], sgd$sd[1])
+    sgd$prop[1] *
+        dnorm(x, sgd$mean[1], sgd$sd[1])
 f2 <- function(x)
-    sgd$prop[2] * dnorm(x, sgd$mean[2], sgd$sd[2])
+    sgd$prop[2] *
+        dnorm(x, sgd$mean[2], sgd$sd[2])
 p <- p +
     stat_function(color = "red", fun = f1) +
     stat_function(color = "blue", fun = f2)
@@ -847,9 +859,11 @@ A plot showing curves computed both ways:
 .pull-left[
 ```{r geyser-hist-dens-2, echo = FALSE}
 f1_2 <- function(x)
-    sgd2$prop[1] * dnorm(x, sgd2$mean[1], sgd2$sd[1])
+    sgd2$prop[1] *
+        dnorm(x, sgd2$mean[1], sgd2$sd[1])
 f2_2 <- function(x)
-    sgd2$prop[2] * dnorm(x, sgd2$mean[2], sgd2$sd[2])
+    sgd2$prop[2] *
+        dnorm(x, sgd2$mean[2], sgd2$sd[2])
 p <- p +
     stat_function(color = "red",
                   linetype = 2,
@@ -925,7 +939,8 @@ Some initial plots:
 ```{r, fig.width = 10}
 p1 <- ggplot(barley) + geom_point(aes(x = yield, y = variety))
 p2 <- ggplot(barley) + geom_point(aes(x = yield, y = site))
-cowplot::plot_grid(p1, p2)
+library(patchwork)
+p1 + p2
 ```
 
 ---
@@ -935,7 +950,7 @@ Using color to separate yields in the two years:
 ```{r, fig.width = 12}
 p1 <- ggplot(barley) + geom_point(aes(x = yield, y = variety, color = year))
 p2 <- ggplot(barley) + geom_point(aes(x = yield, y = site, color = year))
-cowplot::plot_grid(p1, p2)
+p1 + p2
 
 ```
 
@@ -1261,7 +1276,10 @@ A _stacked bar chart_ can also be useful:
 .pull-left[
 ```{r eye-bar-stacked, echo = FALSE}
 psb <- ggplot(eye) +
-    geom_col(aes(x = "", y = Freq, fill = Eye), color = "lightgrey") +
+    geom_col(aes(x = "",
+                 y = Freq,
+                 fill = Eye),
+             color = "lightgrey") +
     scale_fill_manual(values = cols)
 psb
 ```
@@ -1691,7 +1709,7 @@ Some tools for selecting palettes include:
 
 --
 
-* [HCL Wizard](http://www.hclwizard.org/); also available as `hclwizard`
+* [HCL Wizard](http://hclwizard.org/); also available as `hclwizard`
   in the `colorspace` package.
 
 --
@@ -1818,7 +1836,7 @@ Database](https://eerscmap.usgs.gov/uswtdb/).
 
 --
 
-A snapshot is available is [here](`r here_rel("data/us_wind.csv")`)
+A snapshot is available [here](`r here_rel("data/us_wind.csv")`)
 as a CSV file.
 
 --
@@ -2089,7 +2107,7 @@ for different geographic regions.
 --
 
 We will need to merge, or _left join_, the cancer data with the map
-date we loaded for the wind turbine map.
+data we loaded for the wind turbine map.
 
 --
 
@@ -2469,8 +2487,14 @@ Shannon County, SD (FIPS 46113), was renamed to [Oglala Lakota County](https://e
 
 The geometry data table needs to be updated:
 
-```{r}
+```{r, eval = FALSE, echo = FALSE}
+## old version
 counties_sf <- mutate(counties_sf, fips = replace(fips, fips == 46113, 46102))
+```
+
+```{r}
+counties_sf <- mutate(counties_sf,
+                      fips = replace(fips, grepl("oglala", ID), 46102))
 ```
 
 ---
