Cleanups and updates.

--- a/sibs.Rmd
+++ b/sibs.Rmd
@@ -43,6 +43,9 @@ here_rel <- function(path)
 	border-color: #bce8f1;
 	color: #31708f;
 }
+.hljs-comment {
+	color: navy !important;
+}
 ```
 
 
@@ -104,6 +107,7 @@ Useful references:
 
 > Hadley Wickham and Garrett Grolemund (2016), [_R for Data
 > Science_](http://r4ds.had.co.nz/), O'Reilly.
+> ([Second edition in progress.](http://r4ds.hadley.nz/))
 
 > Claus O. Wilke (2019), [_Fundamentals of Data
 >  Visualization_](https://serialmentor.com/dataviz/), O'Reilly.
@@ -149,7 +153,7 @@ R is an Open Source project.
 * R has become the primary framework for developing and making available
   new statistical methodology.
 
-* Many (now over 17,000) extension packages are available through CRAN or
+* Many (now over 20,000) extension packages are available through CRAN or
   similar repositories.
 
 
