Add line breaks to avoid code scrolling.

--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -2195,7 +2195,8 @@ library(viridis)
 ggplot(md) +
     geom_sf(aes(fill = rate1K),
             color = "grey") +
-    scale_fill_viridis(name = "Rate per 1000") +
+    scale_fill_viridis(
+        name = "Rate per 1000") +
     theme_map()
 ```
 ]
@@ -2220,7 +2221,8 @@ p <- ggplot(mdl) +
     geom_sf(aes(fill = rate1K,
                 text = label),
             color = "grey") +
-    scale_fill_viridis(name = "Rate per 1000") +
+    scale_fill_viridis(
+        name = "Rate per 1000") +
     theme_map()
 
 plotly::ggplotly(p, tooltip = "text")
